--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,10 @@ django-cors-headers==4.6.0
 django-environ==0.11.2
 django-filter==24.3
 djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+drf-nested-routers==0.94.1
+pillow==11.0.0
 psycopg2==2.9.10
+PyJWT==2.10.1
 sqlparse==0.5.2
 tzdata==2024.2
