--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,31 @@
 asgiref==3.8.1
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.1
+cryptography==44.0.0
+defusedxml==0.8.0rc2
 Django==5.1.4
 django-cors-headers==4.6.0
 django-environ==0.11.2
 django-filter==24.3
+django-oauth-toolkit==3.0.1
+django-rest-framework-social-oauth2==1.2.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-nested-routers==0.94.1
+idna==3.10
+jwcrypto==1.5.6
+oauthlib==3.2.2
 pillow==11.0.0
 psycopg2==2.9.10
+pycparser==2.22
 PyJWT==2.10.1
+python3-openid==3.2.0
+requests==2.32.3
+requests-oauthlib==2.0.0
+social-auth-app-django==5.4.2
+social-auth-core==4.5.4
 sqlparse==0.5.2
+typing_extensions==4.12.2
 tzdata==2024.2
+urllib3==2.3.0
